third_party/blink/web_tests/external/wpt/dom/idlharness.window_include=Node-expected.txt
This is a testharness.js-based test.
Found 73 tests; 71 PASS, 2 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Window: original interface defined assert_true: Original interface should be defined expected true got false
PASS Node interface: existence and properties of interface object
PASS Node interface object length
PASS Node interface object name
PASS Node interface: existence and properties of interface prototype object
PASS Node interface: existence and properties of interface prototype object's "constructor" property
PASS Node interface: existence and properties of interface prototype object's @@unscopables property
PASS Node interface: constant ELEMENT_NODE on interface object
PASS Node interface: constant ELEMENT_NODE on interface prototype object
PASS Node interface: constant ATTRIBUTE_NODE on interface object
PASS Node interface: constant ATTRIBUTE_NODE on interface prototype object
PASS Node interface: constant TEXT_NODE on interface object
PASS Node interface: constant TEXT_NODE on interface prototype object
PASS Node interface: constant CDATA_SECTION_NODE on interface object
PASS Node interface: constant CDATA_SECTION_NODE on interface prototype object
PASS Node interface: constant ENTITY_REFERENCE_NODE on interface object
PASS Node interface: constant ENTITY_REFERENCE_NODE on interface prototype object
PASS Node interface: constant ENTITY_NODE on interface object
PASS Node interface: constant ENTITY_NODE on interface prototype object
PASS Node interface: constant PROCESSING_INSTRUCTION_NODE on interface object
PASS Node interface: constant PROCESSING_INSTRUCTION_NODE on interface prototype object
PASS Node interface: constant COMMENT_NODE on interface object
PASS Node interface: constant COMMENT_NODE on interface prototype object
PASS Node interface: constant DOCUMENT_NODE on interface object
PASS Node interface: constant DOCUMENT_NODE on interface prototype object
PASS Node interface: constant DOCUMENT_TYPE_NODE on interface object
PASS Node interface: constant DOCUMENT_TYPE_NODE on interface prototype object
PASS Node interface: constant DOCUMENT_FRAGMENT_NODE on interface object
PASS Node interface: constant DOCUMENT_FRAGMENT_NODE on interface prototype object
PASS Node interface: constant NOTATION_NODE on interface object
PASS Node interface: constant NOTATION_NODE on interface prototype object
PASS Node interface: attribute nodeType
PASS Node interface: attribute nodeName
PASS Node interface: attribute baseURI
PASS Node interface: attribute isConnected
PASS Node interface: attribute ownerDocument
PASS Node interface: operation getRootNode(GetRootNodeOptions)
PASS Node interface: attribute parentNode
PASS Node interface: attribute parentElement
PASS Node interface: operation hasChildNodes()
PASS Node interface: attribute childNodes
PASS Node interface: attribute firstChild
PASS Node interface: attribute lastChild
PASS Node interface: attribute previousSibling
PASS Node interface: attribute nextSibling
PASS Node interface: attribute nodeValue
PASS Node interface: attribute textContent
PASS Node interface: operation normalize()
PASS Node interface: operation cloneNode(boolean)
PASS Node interface: operation isEqualNode(Node)
PASS Node interface: operation isSameNode(Node)
PASS Node interface: constant DOCUMENT_POSITION_DISCONNECTED on interface object
PASS Node interface: constant DOCUMENT_POSITION_DISCONNECTED on interface prototype object
PASS Node interface: constant DOCUMENT_POSITION_PRECEDING on interface object
PASS Node interface: constant DOCUMENT_POSITION_PRECEDING on interface prototype object
PASS Node interface: constant DOCUMENT_POSITION_FOLLOWING on interface object
PASS Node interface: constant DOCUMENT_POSITION_FOLLOWING on interface prototype object
PASS Node interface: constant DOCUMENT_POSITION_CONTAINS on interface object
PASS Node interface: constant DOCUMENT_POSITION_CONTAINS on interface prototype object
PASS Node interface: constant DOCUMENT_POSITION_CONTAINED_BY on interface object
PASS Node interface: constant DOCUMENT_POSITION_CONTAINED_BY on interface prototype object
PASS Node interface: constant DOCUMENT_POSITION_IMPLEMENTATION_SPECIFIC on interface object
PASS Node interface: constant DOCUMENT_POSITION_IMPLEMENTATION_SPECIFIC on interface prototype object
PASS Node interface: operation compareDocumentPosition(Node)
PASS Node interface: operation contains(Node)
PASS Node interface: operation lookupPrefix(DOMString)
PASS Node interface: operation lookupNamespaceURI(DOMString)
PASS Node interface: operation isDefaultNamespace(DOMString)
PASS Node interface: operation insertBefore(Node, Node)
PASS Node interface: operation appendChild(Node)
PASS Node interface: operation replaceChild(Node, Node)
PASS Node interface: operation removeChild(Node)
Harness: the test ran to completion.

